--- a/changelog
+++ b/changelog
@@ -1,4 +1,28 @@
-commit 731227a10598eb6b047759f0ca0f2d3f21acfb44 (HEAD, origin/master, origin/HEAD, master)
+commit 43715d82856de76fa6b8fa08adc7bd29b9ff09b2 (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Thu Nov 12 20:40:18 2015 -0430
+
+    * zenodo
+
+commit b646f30c3dfe969a6170dda6e6a756bac15d31fe
+Author: jose perez <sinfallas@gmail.com>
+Date:   Thu Nov 12 20:19:48 2015 -0430
+
+    * travis final
+
+commit b3ee7e1823b064b92ff37f4937c85eb9ce901c7f
+Author: jose perez <sinfallas@gmail.com>
+Date:   Thu Nov 12 20:18:52 2015 -0430
+
+    * travis
+
+commit 8014ed0baafd8602565475d53106545e5fa1dd3a
+Author: jose perez <sinfallas@gmail.com>
+Date:   Thu Nov 5 22:15:22 2015 -0430
+
+    * changelog
+
+commit 731227a10598eb6b047759f0ca0f2d3f21acfb44
 Author: jose perez <sinfallas@gmail.com>
 Date:   Thu Nov 5 22:15:04 2015 -0430
 
