--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
-commit 0971bd8ddd5edcd3f64850db0ff80a0bdea68e0e (HEAD, origin/master, origin/HEAD, master)
+commit 6b318a430c82400c05f6876ef428c49a11c9bf1a (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Sat Dec 5 00:54:43 2015 -0430
+
+    * changelog
+
+commit 0971bd8ddd5edcd3f64850db0ff80a0bdea68e0e
 Author: jose perez <sinfallas@gmail.com>
 Date:   Sat Dec 5 00:54:33 2015 -0430
 
