--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
-commit 5db7c8afbbfc94ae521e56dc55e658de80331d28 (HEAD, tag: v0.1.1, origin/master, origin/HEAD, master)
+commit 8097c81ba53ff35aeeac6cc4ca6ea24f47999cf0 (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Thu Dec 10 21:17:56 2015 -0430
+
+    * changelog
+
+commit 5db7c8afbbfc94ae521e56dc55e658de80331d28 (tag: v0.1.1)
 Author: jose perez <sinfallas@gmail.com>
 Date:   Sun Dec 6 18:37:44 2015 -0430
 
