--- a/changelog
+++ b/changelog
@@ -1,4 +1,16 @@
-commit 837adf1cd0d2b0f685b17ae18a5c773cd5d583eb (HEAD, origin/master, origin/HEAD, master)
+commit f906c952a2766611beedfaf4a325f90b08a08ba5 (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Tue Apr 5 20:39:59 2016 -0430
+
+    * bugfix
+
+commit 957ee2975c966aedb5ebbf9c11c0126e95cf2afc (tag: v0.1.2)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Fri Mar 4 18:55:08 2016 -0430
+
+    * changelog
+
+commit 837adf1cd0d2b0f685b17ae18a5c773cd5d583eb
 Author: jose perez <sinfallas@gmail.com>
 Date:   Fri Mar 4 18:54:57 2016 -0430
 
