--- a/changelog
+++ b/changelog
@@ -1,4 +1,22 @@
-commit 2b6168a8fe1385a769c05749f8dee6f6d3f50c96 (HEAD, origin/master, origin/HEAD, master)
+commit 9143eff6944cf8dec3c1b74695edae4ee0c275ed (HEAD, origin/master, origin/HEAD, master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Sun Oct 1 17:43:41 2017 -0400
+
+    * modificaciones por la auditoria
+
+commit 414ae06f85ba827818f1adfaee9f3a7d499f52c3
+Author: jose perez <sinfallas@gmail.com>
+Date:   Sun Oct 1 17:42:08 2017 -0400
+
+    * multiples modificaciones para cumplir con la auditoria
+
+commit 072956263073a9b1fa8a2033737e37b936d0cdff
+Author: jose perez <sinfallas@gmail.com>
+Date:   Thu Apr 20 14:03:48 2017 -0400
+
+    * changelog
+
+commit 2b6168a8fe1385a769c05749f8dee6f6d3f50c96
 Author: jose perez <sinfallas@gmail.com>
 Date:   Thu Apr 20 14:03:10 2017 -0400
 
